--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,14 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Diploma in Information Technology
+  uni: Putra Intelek International College
+  year: 2018 &mdash; 2020
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: Dean's Award 2018
+    - award: Dean's Award 2019
+    summary: Leader of Community Service Subject, leading my course mate during exams season
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Sijil Pelajaran Malaysia (SPM)
+  uni: SMK Puchong Perdana
+  year: 2013 &mdash; 2017
+  award: 4A 2B 1C 3D
+  summary: Team Leader of Diabolo Club, Assistant of Chinese Language Association Club
