--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Outdoor Activities (Hiking, Camping)
+- description: Anime & Manga 
+- description: As Volunteer to helping others
