--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,21 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+# - skill: Organizational leadership
+#   description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# - skill: Communications strategy
+#   description: Content and marketing strategy,
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# - skill: Digital content development and creation
+#   description: Copy writing, graphic design, web design, front-end web development, print design
+
+# Skills
+# Web Development
+- skill: Web Development
+  description: Sencha ExtJS Framework, PHP, Javascript, HTML, CSS, MySQL
+
+# System Analysis and Design
+- skill: System Analysis &amp; Design
+  descroption: Simple and beginner level of  system analysis &amp; design 
