--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ resume_name:                    "Nick Becker"
 resume_title:                   "Senior Engineer"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "nick_the_engineer@atomictinker.com"
+resume_contact_email:           "recruit_nick@atomictinker.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "410-541-6232"
 resume_contact_address:         "4309 Samantha Dr, Raleigh, NC"
 
-resume_header_contact_info:     "Raleigh, NC • +14105416232 • nick_the_engineer@atomictinker.com"
+resume_header_contact_info:     "Raleigh, NC • +14105416232 • recruit_nick@atomictinker.com"
 display_header_contact_info:    "true"
 
 resume_header_intro: "<p>Architect/engineer with 17+ years of experience in network, security, collaboration, and software development. A strong problem solver recognized for dedication and attention to detail to complete projects on time and deliver effective goal-oriented results.</p>"
