--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,8 +6,8 @@
     - award: President's List (3.9 GPA and above)
   summary: At SU I am taking coursework to learn more about Computer Science and Data Science. 
            I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. 
-           Next quarter, I plan on taking Databases and Data Visualization.  
-           My cumulative GPA is a 3.7.
+           I am currently taking Fundamentals of Databases, Data Visualization, and Computing Systems.  
+           My cumulative GPA is a 3.8.
 
 - degree: High School Diploma
   uni: Iolani High School
