--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -12,3 +12,4 @@
 - skill: Other
   description: I am a fast learner who can adapt easily to any situation. I have an excellent work ethic and always finish my work a couple days in advance. 
   I am good at time management and working in group settings.
+  I have excellent problem solving skills.
