--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,8 +1,7 @@
 # Skills
 # Programming Languages
 - skill: Programming Languages
-  description: The primary languages I have learned are C++ and C#. I have also learned the basics of Python through self-teaching. 
-  I am currently learning R. 
+  description: The primary languages I have learned are C++ and C#. I have also learned the basics of Python through self-teaching. I am currently learning R. 
 
 # Mathematics
 - skill: Mathematics
@@ -10,6 +9,4 @@
 
 # Other
 - skill: Other
-  description: I am a fast learner who can adapt easily to any situation. I have an excellent work ethic and always finish my work a couple days in advance. 
-  I am good at time management and working in group settings.
-  I have excellent problem solving skills.
+  description: I am a fast learner who can adapt easily to any situation. I have an excellent work ethic and always finish my work a couple days in advance. I am good at time management and working in group settings. I have excellent problem solving skills.
