--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Machine Learning
+- description: Natural Language Processing
+- description: Big Data
