--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,7 +9,7 @@
 - company: MetLife
   position: Senior Network Engineer
   duration: April 2014 &mdash; April 2015
-  summary: Network architect and project manager working to convert Metlife's discontinuous network to a seamless enterprise.<ul class="resume-item-list"><li>Project lead for Cyprus LAN/WAN redesign, connecting Cyprus up to Frankfurt with VPN and installing new layer 3 switch.</li><li>Project lead for DMVPN solution that provides redundant paths from European sites up to hub locations for email and internet access.</li><li>Network project lead for European Office 365 WAN connections, designed connectivity, sized WAN connections and ordered equipment.</li><li>Project lead to fix DMVPN connecting Colombia, Mexico and NA data centers, removed all static route and implemented EIGRP across the WAN.</li></ul>
+  summary: Network architect and project manager working to convert Metlife's discontiguous network to a seamless enterprise.<ul class="resume-item-list"><li>Project lead for Cyprus LAN/WAN redesign, connecting Cyprus up to Frankfurt with VPN and installing new layer 3 switch.</li><li>Project lead for DMVPN solution that provides redundant paths from European sites up to hub locations for email and internet access.</li><li>Network project lead for European Office 365 WAN connections, designed connectivity, sized WAN connections and ordered equipment.</li><li>Project lead to fix DMVPN connecting Colombia, Mexico and NA data centers, removed all static route and implemented EIGRP across the WAN.</li></ul>
 
 
 # Senior Network Engineer
