--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,6 +1,12 @@
 # Recognitions
+- award: HashiCorp Certified - Terraform Associate
+  organization: HashiCorp 
+  year: 2022
+  summary:  <p>Certification Date - Apr 15, 2022<br>
+               Certification ID - d8b9502c-511d-4a01-af12-39d6ae1cf40a<br>
+               <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d8b9502c-511d-4a01-af12-39d6ae1cf40a" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 - award: Microsoft Azure Fundamentals - AZ-900
-  organization: Microsoft - Pearson VUE
+  organization: Microsoft
   year: 2021
   summary:  <p>Certification Date - Nov 20, 2021<br>
                Certification ID - I038-3299<br>
