--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ resume_header_intro: "<p>I'm a young DevOps based in Italy with the passion for 
 Moving across servers, code, and deployments, I started working as a professional in 2016 gaining and maturing experience
 day-by-day, always looking for new technologies and methods.<br><br>
 
-Experienced and certified by VMware on virtualization, by Rancher on Kubernetes clusters management.<br><br>
+Experienced and willing to learn new ways to destr... deploy new solutions!<br><br>
 
-In love with Kubernetes, automation, infrastructures and... Raspberry Pi.<br><br>
+In love with automation, scripts, Kubernetes, infrastructures and... Raspberry Pi.<br><br>
 
-Let's config, deploy and destroy. Give me a shell and I'll be happy with it.
+Let's config, deploy and destroy. Give me a shell and I'll be happy with it.<br><br>
 Hey, find me on <a href='https://medium.com/@tupone.mattia'>Medium</a> too.<br>
 </p>"
 
