--- a/_config.yml
+++ b/_config.yml
@@ -55,12 +55,12 @@ resume_section_interests:       true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/mattups"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  #resume_twitter_url:           "http://twitter.com/jglovier"
+  #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/mattia-tupone-660450a6/"
   resume_instagram_url:         "https://www.instagram.com/tups__/"
-  resume_website_url:           "https://mattups.github.io/resume/"
+  #resume_website_url:           "https://mattups.github.io/resume/"
   resume_medium_url:            "https://medium.com/@tupone.mattia"
 resume_print_social_links:      true
 
