--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Mattia Tupone"
-resume_title:                   "DevOps"
+resume_title:                   "DevOps Engineer"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "tupone.mattia@gmail.com"
@@ -23,16 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I'm a young DevOps based in Italy with the passion for IT systems and coding.
-Moving across servers, code, and deployments, I started working as a professional in 2016 gaining and maturing experience
-day-by-day, always looking for new technologies and methods.<br><br>
-
-Experienced and willing to learn new ways to destr... deploy new solutions!<br><br>
-
-In love with automation, scripts, Kubernetes, infrastructures and... Raspberry Pi.<br><br>
-
-Let's config, deploy and destroy. Give me a shell and I'll be happy with it.
-</p>"
+resume_header_intro: "Patterns before tools"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -57,7 +48,7 @@ resume_social_links:
   resume_github_url:            "https://github.com/mattups"
   #resume_twitter_url:           "http://twitter.com/jglovier"
   #resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
+  #resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/mattia-tupone-660450a6/"
   resume_instagram_url:         "https://www.instagram.com/tups__/"
   #resume_website_url:           "https://mattups.github.io/resume/"
