--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -18,9 +18,10 @@
     <li>Building pipelines with GitLab CI/CD, GitHub Actions and Jenkins</li>
     <li>Managing and versioning codebases with GitLab and GitHub</li>
     <li>Writing automation scripts in Bash, Python and PowerShell</li>
+    <li>Experience with distributed systems like Apache Kafka</li>
     <li>Monitoring infrastructure with Prometheus and Grafana stack</li>
     <li>Building observability solutions with ELK (Elasticsearch, Logstash, Kibana)</li>
-    <li>Building and deploying solutions on AWS, Azure, DigitalOcean, Hetzner</li>
+    <li>Managing RDBMS system such as PostgreSQL and SQL Server 2012/2014</li>
     </ul>
 
 - skill: Systems, Security, Networking
@@ -33,17 +34,4 @@
     <li>Experience with reverse proxy configuration and load balancers secured with up-to-date security best practices</li>
     <li>Experience with HTTPS, SSH and most common security-based protocols</li>
     <li>Experience with configuration and maintenance of SSL and IPsec VPN systems</li>
-    </ul>
-
-- skill: Databases
-  description: <ul class="resume-item-list">
-    <li>MySQL</li>
-    <li>SQL Server 2012/2014</li>
-    <li>PostgreSQL</li>
-    </ul>
-
-- skill: Various
-  description: <ul class="resume-item-list">
-    <li>Apache Kafka</li>
-    <li>Basic SAP knowledge</li>
     </ul>
