--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,6 +3,9 @@
 - project: Beam Mobility
   role: Cloud and DevOps Architect
   duration: 2020 &mdash; Present
-  description: "Beam is a community-based approach for sustainable mobility. The project has already won the following awards:<br><br>
-- Best Pitch of 2019 @Imperial College of London.<br><br>
-- Top 30 Projects 2020 @ESA (European Space agency) MyGalileoSolution - In the Top 3 finals for 2021."
+  description: Beam is a community-based approach for sustainable mobility. The project has already won the following awards:<br>
+    <ul class="resume-item-list">
+    <li>Best Pitch of 2019 @Imperial College of London</li>
+    <li>Top 30 Projects 2020 @ESA (European Space agency) MyGalileoSolution - In the Top 3 finals for 2021.</li>
+    </ul>
+    
