--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,10 @@
 - company: Aptargroup, Inc
   position: DevOps Engineer, IS Software Engineering
   duration: Jan, 2020 &mdash; Present
-  summary: CI/CD strategies, legacy and actual software and codebase management/deploy, Kubernetes infrastructure, Raspberry infrastructure with k3s, application monitoring, DevOps tools and methods, research & development.
+  summary:
+    CI/CD strategies, legacy and actual software and codebase management/deploy,
+    Kubernetes infrastructure, Raspberry infrastructure with k3s, application monitoring,
+    DevOps tools and methods, research & development.
 # DevOps
 - company: Aesys
   position: DevOps Consultant
@@ -25,3 +28,4 @@
   position: IT Technician/SysAdmin
   duration: Feb, 2016 &mdash; Feb, 2018
   summary: Management, implementation, maintenance and updating of corporate IT infrastructures and in separate location.
+
