--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,6 +12,7 @@
   summary: 
 
   certs:
+    - cert: AWS Certified Solutions Architect - Associate
     - cert: Cisco Certified Network Professional Voice
     - cert: Cisco Certified Network Professional
     - cert: Cisco Certified Design Professional
