--- a/_data/education.yml
+++ b/_data/education.yml
@@ -13,9 +13,10 @@
 
   certs:
     - cert: AWS Certified Solutions Architect - Associate
+    - cert: Cradlepoint Certified Network Professional
+    - cert: Cisco Meraki CMNA
     - cert: Cisco Certified Network Professional Voice
     - cert: Cisco Certified Network Professional
     - cert: Cisco Certified Design Professional
-    - cert: Cisco Meraki CMNA
     - cert: Palo Alto ACE, PCNSE 6
     - cert: F5 Certified BIG-IP Administrator
