--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,10 @@
 # Recognitions
+- award: CKS - Certified Kubernetes Security Specialist
+  organization: The Linux Foundation
+  year: 2022
+  summary: <p>Certification Date - Oct 8, 2022<br>
+    Certification ID - LF-spq9d8only<br>
+    <div data-iframe-width="350" data-iframe-height="270" data-share-badge-id="6c50b36d-b176-475c-90b0-ab688526aa68" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 - award: HashiCorp Certified - Terraform Associate
   organization: HashiCorp
   year: 2022
