--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,5 +1,5 @@
 # Recognitions
-- award: Carolinas/Mid-Atlantic/Georgia/Tennessee Engineer of the Year
+- award: Southeast Engineer of the Year
   organization: Presidio
-  year: 2021
+  year: FY 2021
   summary: Awarded the Carolinas/Mid-Atlantic/Georgia/Tennessee Engineer of the Year for talents in collaboration, network and security. Additionally I held regular cadence calls with local team to discuss, learn and train in automation of in-flight projects to limit mistakes and increase overall quality of services utilizing Python and JavaScript.
