--- a/_data/experience-long.yml
+++ b/_data/experience-long.yml
@@ -24,15 +24,15 @@
 # Senior Network Engineer at Presidio
   position3: Senior Network Engineer
   duration3: April 2015 &mdash; September 2019
-  summary3: Design and Implementation of Routing, Switching, Palo Alto and Cisco ASA Firewalls<ul class="resume-item-list">
-      <li>Worked with Envision Healthcare to migrate 30+ VPN connections from their Netscreen and Juniper firewalls to Palo Alto. w/Panorama management.</li>
-      <li>Engineered NC DHHS Morganton Hospital network using 6800-XL cores w/VSS multiple VRFs, 2 ASA 5585’s with HA, multi-context and FirePower IPS and a pair 4451-X edge routers using BGP to peer state service provider and redistributing into internal EIGRP.</li>
-      <li>Engineered core Cisco 6807-XL in 2 VSS pairs for Elizabeth City State University. I implemented an EIGRP solution with 4 VRFs cores that connect to existing core redistributing OSPF and EIGRP.</li>
+  summary3: Routing, Switching, Palo Alto and Cisco ASA Firewall<ul class="resume-item-list">
+      <li>Worked with Envision Healthcare engineers to migrate 30+ VPN connections from their Netscreen and Juniper firewalls to Palo Alto. I also fixed Panorama to bring all PA firewalls under template and device group management.</li>
+      <li>Designed and implemented a new 2 LAN/core and WAN block that connect to the NC state intranet/internet provider with firewalls and IPS for NC DHHS. I configured 2 6800-XL cores with VSS and multiple VRFs, a 4500 core, 2 ASA 5585’s with HA and multi-context, 2 ASA 5545 with FirePower IPS and a pair 4451-X edge routers using BGP to peer with the ISP and redistributing into internal EIGRP.</li>
+      <li>Designed and implemented 4 new Cisco 6807-XL in 2 VSS pairs for Elizabeth City State University. I implemented an EIGRP solution with 4 VRFs on the new cores that connect back to their old core where I configured redistribution between OSPF and EIGRP.</li>
       <li>Installed and configured 2 Palo Alto VMs for CREE in Azure to secure their cloud infrastructure and configured management in Panorama.</li>
-      <li>Designed and implemented City of Winston Salem fiber ring w/OSPF over MPLS routing 20 sites w/Cisco ASR routers back to HQ Nexus 7k.</li>
-      <li>Engineered a Active/Active datacenter Palo Alto 5060 managed w/Panorama between Nexus 7k and Nexus 9k for Meadowbrook Insurance Group. Deployed 2 remote site Palo Alto 5020's for edge security.</li>
-      <li>Migrated Pfeiffer University campus network consisting of Meraki MS350 switches, MR53 APs and MX600 firewalls and connecting back to old Cisco DC switches using OSPF and LACP.</li>
-      <li>Converted Highwoods Properties remote office connectivity to IWAN for 9 sites using Cisco CSR 1000V routers and a combination of MPLS and Internet circuits.</li>
+      <li>Designed and implemented City of Winston Salem fiber ring utilizing OSPF over MPLS. I created virtual circuits from 20 sites across the city using Cisco ASR routers on fiber ring back to 2 high availability Nexus 7k head end switches.</li>
+      <li>Designed and implemented a Active/Active datacenter Palo Alto 5060 managed w/Panorama between Nexus 7k and Nexus 9k for Meadowbrook Insurance Group in Southfield, MI. I configured 2 other locations with active/active datacenter Palo Alto 5020's.</li>
+      <li>Designed and migrate Pfeiffer University campus network consisting of Meraki MS350 switches, MR53 access points and MX600 firewalls from old Cisco infrastructure. Solution included connecting back to Cisco DC switches using OSPF and LACP.</li>
+      <li>Converted Highwoods Properties remote office connectivity to SD-WAN for 9 sites using Cisco CSR 1000V routers and a combination of MPLS and Internet circuits.</li>
     </ul>
 
 
@@ -55,16 +55,16 @@
   summary1: Principal network and voice architect and engineer<ul class="resume-item-list">
       <li>Lead voice architect responsible for 3 global CUCM, Unity and UCCX clusters for several cluster upgrades and daily operations.</li>
       <li>Architect and team lead for Internet redundancy project changing our WAN infrastructure at HQ and DR sites from Static routes to EIGRP to edge and BGP on to Internet with redistribution. I acquired a /24 from ARIN and re-IP addressed all Internet facing applications.</li>
-      <li>Architect and team lead for network installation at new Toronto warehouse where I managed cable vendors, supplied statement of work documents, drawings for wireless AP deployment, MDF/IDF installations, fiber runs and network drops.</li>
+      <li>Architect and team lead for network installation at new Toronto warehouse where I managed cable vendors, supplied statement of work documents, drawings for wireless access point deployment, MDF/IDF installations, fiber runs and network drops.</li>
     </ul>
 
 # Network Engineer at Under Armour
   position2: Network Engineer
   duration2:  December 2005  &mdash; May 2009
   summary2: Started out on the ground floor of Under Armour’s global telecommunications services<ul class="resume-item-list">
-      <li>Supported unified communications and contact center operations.</li>
-      <li>Supported 3 MPLS clouds, EIGRP on the LAN and BGP in the MPLS clouds with redistribution and summarization between the protocols and VPN connections for redundancy.</li>
-      <li>Engineered Riverbed Steelhead appliances for compression and TCP optimization across the WAN. Developed QoS strategy reducing latency for voice and business network traffic using CBWFQ.</li>
-      <li>Migrated Cisco VPN for corperate remote users to Juniper Secure Connect SSLVPN.</li>
+      <li>Provided operations leadership and capacity planning for data, security, unified communications, contact center, and wireless functions supporting 6000+ teammates across Europe, North America and Asia/Pac in the areas of retail, manufacturing, distribution, and office operations.</li>
+      <li>Responsible for LAN/WAN routing connecting internal office and external partners globally using 3 MPLS clouds, EIGRP on the LAN and BGP in the MPLS clouds with redistribution and summarization between the protocols and VPN connections for redundancy.</li>
+      <li>Configured and installed Riverbed Steelhead appliances for compression and TCP optimization across the WAN. Developed QoS strategy reducing latency for voice and business network traffic using CBWFQ.</li>
+      <li>Migrated Cisco VPN to Juniper Secure Connect VPN.</li>
       <li>Migrated analog voice T1 circuits to Level3 SIP service currently on a 3 Mbps MPLS (VPN) on 100 Mbps circuit w/300 Concurrent SIP call paths for local and toll free.</li>
     </ul>
