--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -3,7 +3,7 @@
 
 - organization: Amedisys Hospice
   role: Direct Care Volunteer
-  year: 2021 &mdash; 2022
+  year: 2021 &mdash; Present
   url: https://www.amedisys.com/
   summary: I donate my time and talent to provide emotional support and respite directly to hospice patients and their caregivers.
 
