--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Presidio
   positionone: Cloud / DevOps Engineer
   durationone: August 2022 &mdash; Present
-  summaryone: Cloud Architect and Engineering, DevOps, Network Automation and Software Development<ul class="resume-item-list">
+  summaryone: Cloud Architect and Engineering, DevOps and Network Automation<ul class="resume-item-list">
       <li>Now on the DevOps/Cloud Engineering team I have built Ansible playbooks using Jinja to update network equipment and utilized Python and JavaScript to make MACD in Cisco CallManager and Unity.</li>
       <li>Utilized Postman to make API calls to Meraki.</li>
       <li>Created AWS EC2 multi-AZ redundant instances running nginx and used security groups and application load balancers to host the web server securely using SSL.</li>
