--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,4 +2,4 @@
 - award: Southeast Engineer of the Year
   organization: Presidio
   year: FY 2021
-  summary: Awarded the Carolinas/Mid-Atlantic/Georgia/Tennessee Engineer of the Year for talents in collaboration, network and security. Additionally I held regular cadence calls with local team to discuss, learn and train in automation of in-flight projects to limit mistakes and increase overall quality of services utilizing Python and JavaScript.
+  summary: Awarded the Southeast Engineer of the Year for talents in collaboration, network and security. I held regular cadence calls to train the team in automation of projects to limit mistakes and increase overall quality of services utilizing Python and JavaScript.
