--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ resume_section_education:       true
 # resume_section_skills:          true
 resume_section_recognition:     true
 # resume_section_links:           true
-resume_section_associations:    true
-resume_section_interests:       true
+# resume_section_associations:    true
+# resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
