Updated config and experience

--- a/_config.yml
+++ b/_config.yml
@@ -46,11 +46,11 @@ resume_section_recognition:     true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/nickbec10"
-  resume_twitter_url:           "http://twitter.com/nicbecker"
+  # resume_twitter_url:           "http://twitter.com/nicbecker"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/nick-becker-339411255/"
-  resume_instagram_url:         "https://www.instagram.com/aeon_sumo"
+  # resume_instagram_url:         "https://www.instagram.com/aeon_sumo"
   # resume_website_url:           "http://joelglovier.com"
   # resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
