--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -16,7 +16,7 @@
   position: Senior Collaboration Engineer
   duration: September 2019 &mdash; August 2022
   summary: Unified Communications and Paging<ul class="resume-item-list">
-      <li>In 2021 I was working on the NC AOC eCourts upgrade where I utilized skills in Cisco DNA center, vManage, CUCM, CME, Unity, CUE, XMedius, InformaCast, analog voice and racking/stacking hardware. I developed code that increased the efficiency of the team, reducing hours and costs on the 40 million dollar project.</li>
+      <li>In 2021 I worked on the NC AOC eCourts upgrade where I utilized skills in Cisco DNA center, vManage, CUCM, CME, Unity, CUE, XMedius, InformaCast, analog voice and racking/stacking hardware. I developed code that increased the efficiency of the team, reducing hours and costs on the 40 million dollar project.</li>
       <li>I was involved in several UC upgrades to 12.X that involve large voice clusters comprised of CUCM, Unity, UCCX, CUBE, and Attendant Console for City of Durham, Santee Cooper, NC DHHS, South Piedmont CC, Carolina Biological and Lion Oil, a new Jabber implementation for NC DHHS, a migration to SIP/Oracle SBC for PPL Electric and a SIP migration for Michelin.</li>
     </ul>
 
